# apex_chess

./: .gitignore  Cloud‑First System Design for Apex Chess (Flutter Frontend + Cloud Engines).md  README.md  pubspec.yaml
.agents/testing/: apex-ui-overhaul-plan.md  apex-ui-overhaul-report.md  nuclear-overhaul-plan.md  nuclear-overhaul-report.md  phase4-test-plan.md  platinum-features-test-plan.md  platinum-features-test-report.md  platinum-tier-test-plan.md  platinum-tier-test-report.md  pr8-test-plan.md  pr8-test-report.md
.github/: PULL_REQUEST_TEMPLATE.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
assets/openings/: eco.tsv
docs/: ONLINE_REVIEW_FLUTTER_CONTRACT.md
docs/audits/: 2026-04-26-phaseA-integration-audit.md
docs/specs/: apex_chess_analysis_training_ux_spec.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/di/: providers.dart
lib/core/domain/entities/: analysis_profile.dart  analysis_timeline.dart  deep_tactical_verdict.dart  engine_line.dart  entities.dart  move_analysis.dart
lib/core/domain/services/: analysis_cache_key.dart  analysis_debug_export.dart  analysis_versions.dart  coach_explanation_service.dart  deep_tactical_verifier.dart  evaluation_analyzer.dart  game_identity_service.dart  move_classifier.dart  move_quality_display.dart  position_heuristics.dart  sacrifice_trajectory.dart  win_percent_calculator.dart
lib/core/infrastructure/engine/: README.md  chess_engine.dart  engine.dart
lib/core/network/: apex_http_client.dart  api_headers.dart  connectivity_models.dart  connectivity_service.dart
lib/core/platform/audio/: chess_audio_service.dart
lib/core/utils/: move_explanation.dart  safe_text.dart
lib/features/account/data/: account_repository.dart  logout_service.dart
lib/features/account/domain/: apex_account.dart
lib/features/apex_academy/data/: academy_stats_repository.dart
lib/features/archives/data/: archive_repository.dart  archive_save_hook.dart
lib/features/archives/domain/: archived_game.dart
lib/features/coach/data/: player_profile_service.dart
lib/features/coach/domain/: player_profile.dart
lib/features/home/presentation/: pgn_paste_display_state.dart
lib/features/import_match/data/: chess_com_repository.dart  lichess_repository.dart
lib/features/import_match/domain/: imported_game.dart
lib/features/mistake_vault/data/: mistake_vault_repository.dart  mistake_vault_save_hook.dart
lib/features/mistake_vault/domain/: mistake_drill.dart
lib/features/pgn_review/application/: online_review_product_controller.dart  online_review_product_use_case.dart  online_review_runtime_gate.dart
lib/features/pgn_review/domain/: analysis_contract.dart  (+12 more)
lib/infrastructure/api/: cloud_eval_service.dart  cloud_game_analyzer.dart  lichess_cloud_eval_client.dart  lichess_opening_client.dart  mock_analysis_api_client.dart  opening_service.dart
lib/infrastructure/engine/: composite_game_analyzer.dart  eco_book.dart  local_eval_service.dart  local_game_analyzer.dart
lib/shared_ui/controllers/: connection_presence_controller.dart  connectivity_presence_display.dart  service_health_service.dart
lib/shared_ui/copy/: apex_copy.dart
lib/shared_ui/identity/: apex_identity_matcher.dart  player_identity_display.dart
lib/shared_ui/themes/: apex_theme.dart
lib/shared_ui/widgets/: apex_account_pill.dart  apex_chess_board.dart  apex_connection_presence_badge.dart  apex_eval_bar.dart  apex_game_card.dart  apex_loading.dart  apex_platform_badge.dart  apex_player_avatar.dart  apex_profile_avatar_button.dart  apex_side_marker.dart  apex_snack.dart  brilliant_glow.dart  evaluation_chart.dart  glass_panel.dart  move_quality_aura.dart  quantum_shatter_loader.dart  radar_scan.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: fetch_stockfish.sh
src/native/: CMakeLists.txt  README.md  stockfish_bridge.cpp  stockfish_bridge.h
test/apex_academy/: academy_streak_test.dart
test/app/di/: providers_test.dart
test/core/utils/: safe_text_test.dart
test/features/account/: connect_account_identity_test.dart
test/features/archives/: archive_card_display_test.dart  archive_filter_ui_test.dart  archive_save_reliability_test.dart  archive_source_inference_test.dart  cached_timeline_roundtrip_test.dart
test/features/coach/: player_profile_service_test.dart
test/features/global_dashboard/: dashboard_display_model_test.dart  global_dashboard_empty_state_test.dart  recent_scan_display_test.dart
test/features/home/: home_activity_display_test.dart  pgn_paste_display_state_test.dart
test/features/import_match/: import_discovery_display_test.dart  imported_game_display_test.dart  review_mode_routing_test.dart
test/features/live_play/: castling_marker_test.dart
test/features/mistake_vault/: drill_worthiness_test.dart
test/features/profile/: profile_screen_identity_test.dart
test/features/profile_scanner/: profile_scanner_controller_test.dart
test/features/profile_stats/: profile_stats_avatar_cache_test.dart  profile_stats_avatar_test.dart
test/fixtures/online_review_product/: forbidden_internal_fields.json
test/infrastructure/engine/: eco_book_test.dart  local_eval_service_fen_validation_test.dart  local_eval_service_multipv_test.dart  local_game_analyzer_phase_a_test.dart
test/shared_ui/: apex_account_pill_test.dart  apex_copy_test.dart  apex_game_card_display_model_test.dart  apex_glass_toast_test.dart  apex_identity_matcher_test.dart  apex_platform_badge_test.dart  apex_player_avatar_test.dart  apex_profile_avatar_button_test.dart  apex_side_marker_test.dart  connection_presence_controller_test.dart  connectivity_presence_display_test.dart  player_identity_display_test.dart
test/user_validation/: username_validation_controller_test.dart
tool/: online_review_build_config_report.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+111 files in other folders)
